--- a/Pipfile
+++ b/Pipfile
@@ -30,3 +30,4 @@ markdown = "<3.2"
 django-filter = "==2.2.0"
 coreapi = "*"
 psycopg2-binary = "*"
+mysqlclient = {path = "./mysqlclient-1.4.6-cp37-cp37m-win_amd64.whl"}
