--- a/pinry-spa/package.json
+++ b/pinry-spa/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
     "buefy": "^0.8.20",
     "core-js": "^3.3.2",
     "register-service-worker": "^1.6.2",
